fix: add solution and fix spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -115,7 +115,6 @@ header {
   header {
     max-inline-size: 33.75rem;
     margin-block-start: 4.2rem;
-    margin-block-end: -3rem;
   }
 }
 
